--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: your_name
       changes:
         - createTable:
-            tableName: your_table_name
+            tableName: landmark
             columns:
               - column:
                   name: id
@@ -17,3 +17,57 @@ databaseChangeLog:
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
+              - column:
+                  name: description
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: provider
+                  type: VARCHAR(255)
+              - column:
+                  name: creation_date
+                  type: DATE
+                  constraints:
+                    nullable: false
+
+  # Новый changeSet для вставки данных
+  - changeSet:
+      id: 2
+      author: your_name
+      changes:
+        - insert:
+            tableName: landmark
+            columns:
+              - column:
+                  name: name
+                  value: "Eiffel Tower"
+              - column:
+                  name: description
+                  value: "Famous tower in Paris"
+              - column:
+                  name: provider
+                  value: "City of Paris"
+              - column:
+                  name: creation_date
+                  value: "1889-03-31"
+
+  - changeSet:
+      id: 3
+      author: your_name
+      changes:
+        - insert:
+            tableName: landmark
+            columns:
+              - column:
+                  name: name
+                  value: "Statue of Liberty"
+              - column:
+                  name: description
+                  value: "Iconic statue in New York City"
+              - column:
+                  name: provider
+                  value: "US Government"
+              - column:
+                  name: creation_date
+                  value: "1886-10-28"
