mwp Pgr db next work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/landmark_helper
+spring.datasource.url=jdbc:postgresql://localhost:5432/landmark
 spring.datasource.username=postgres
 spring.datasource.password=my_@_password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 spring.liquibase.enabled=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
