--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile=db/changelog/db.changelog-master.yaml
-url=jdbc:postgresql://localhost:5432/landmark_helper
+url=jdbc:postgresql://localhost:5432/landmark
 username=postgres
 password=my_@_password
 driver=org.postgresql.Driver
