--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,31 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.version>3.3.4</spring-boot.version>
         <lombok.version>1.18.26</lombok.version>
+        <modelMapper.version>3.2.1</modelMapper.version>
         <postgresql.version>42.3.1</postgresql.version>
         <liquibase.version>4.17.2</liquibase.version> <!-- Синхронизируем версии -->
     </properties>
 
+
+
+
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>4.0.0-beta-1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
+
+
         <!-- Spring Boot Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -32,6 +52,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
 
         <!-- PostgreSQL Driver -->
         <dependency>
